--- a/CoralogixPoc/CoralogixPoc.csproj
+++ b/CoralogixPoc/CoralogixPoc.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CoralogixCoreSDK" Version="1.1.12" />
+    <PackageReference Include="CoralogixCoreNLog" Version="1.1.12" />
+    <PackageReference Include="NLog.Targets.Http" Version="1.0.20" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
